# Valeriya-Programming-Language

./: .gitignore  CMakeLists.txt  README.md
Data/: Types.txt  generalized_property_example.txt  property_syntax_example.txt  treedefs.rec
Data/Example Code/: calculus.val
Data/ExampleCode/: semantics.val
Dependencies/: cxxopts.hpp
Dependencies/lexing2023/: .gitignore  DFA.h  LICENSE.TXT  acceptor.h  algorithms.h  classifier.h  comp.h  concepts.h  crazy.h  deterministic.h  filereader.cpp  filereader.h  firstnote.txt  flatmap.h  generators.h  includes.h  indentation.h  minimization.h  minmax.h  partition.cpp  partition.h  reachfunc.h  state.h  stateset.cpp  stateset.h  viewreader.h
Dependencies/lexing2023/INSTRUCTIONS/: Makefile  instructions.tex
Dependencies/tvm/: concepts.h  distinct.h  field.h  hexprint.h  includes.h  local.h  optional_notused.h  scalar.h  scalar_list.h  scalar_vector.h  unit.h
ExampleCode/: Formula.val  calculus.val  ex.c  example.c  example.val  no_expr.val  optional.val  property_syntax.val
Sources/: argsconfig.cpp  argsconfig.h  main.cpp
Sources/Commands/: CGenerator.cpp  CGenerator.h  Command.h  CompileInfo.cpp  CompileInfo.h  DeclareVarCommand.h
Sources/Compilation/: Compiler.h
Sources/Lexing/: Lexer.cpp  Lexer.h  Token.h  lexer.cpp  lexer.h  token.h
Sources/Parsing/: Parser.cpp  Parser.h  ParserException.h
Sources/SemanticAnalysis/: DSU.h  ExprAnalysis.h  SemanticException.cpp  SemanticException.h  Semantics.cpp  Semantics.h  Types.cpp  Types.h
Sources/Statements/: Expression.cpp  Expression.h  Statement.cpp  Statement.h  selector.cpp  selector.h  statements.rec  templated_statements.rec
Sources/Tests/: lexer_test.cpp  tests.cpp
Sources/TreeGen/: expr.cpp  expr.h  selector.cpp  selector.h
Tests/: lexer_test.h  parser_test.h
